[package]
name = "spatialvault"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.11", features = ["derive"] }
csv = "1.2.2"
env_logger = "0.10.0"
flate2 = "1.0.26"
flatgeobuf = "3.25.0"
geo-types = "0.7.10"
geojson = { version = "0.24.1", features = ["geo-types"] }
log = "0.4.19"
postgres = "0.19.5"
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.100"
wkt = "0.10.3"
