[package]
name = "acled2pgsql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.24", features = ["serde"] }
clap = { version = "4.3.5", features = ["derive"] }
diesel = { version = "2.0.4", features = ["postgres", "chrono"] }
env_logger = "0.10.0"
log = "0.4.19"
postgis = "0.9.0"
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
toml = "0.7.4"
