[package]
name = "msfp2pgsql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.10", features = ["derive"] }
csv = "1.2.2"
env_logger = "0.10.0"
flate2 = "1.0.26"
log = "0.4.19"
reqwest = { version = "0.11.18", features = ["blocking"] }
serde = { version = "1.0.166", features = ["derive"] }
serde_json = "1.0.100"
